force-app/main/default/objects/Applied_Discount__c/Applied_Discount__c.object-meta.xml
<CustomObject>
    <label>Applied Discount</label>
    <nameField>
        <label>Applied Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>