force-app/main/default/objects/Applied_Discount__c/fields/Amount_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Discounted__c</fullName>
    <label>Amount Discounted</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>